--- a/index.html
+++ b/index.html
@@ -93,26 +93,26 @@
               </ul>
               <div class="hero-cta">
                 <a href="#services" class="btn btn-primary">Explore Our Services</a>
-                <a href="tel:+1 (555) 987-6543" class="btn btn-link"><i class="bi bi-telephone"></i> +1 (555) 987-6543</a>
+                <a href="tel:+1 (555) 987-6543" class="btn btn-link"><i class="bi bi-telephone"></i> 7020138845</a>
               </div>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="hero-image-wrapper" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/about/about-square-13.webp" alt="" class="img-fluid hero-image">
-              <div class="stat-card top-right">
-                <div class="stat-value">18.9K</div>
-                <div class="stat-label">Improved market presence</div>
-                <div class="stat-icon">
+              <img src="assets/img/about/cs.png" alt="" class="img-fluid hero-image">
+              <!-- <div class="stat-card top-right"> -->
+                <!-- <div class="stat-value">18.9K</div> -->
+                <!-- <div class="stat-label">Improved market presence</div> -->
+                <!-- <div class="stat-icon">
                   <i class="bi bi-graph-up-arrow"></i>
-                </div>
+                </div> -->
               </div>
-              <div class="stat-card bottom-left">
-                <div class="stat-value">+450%</div>
-                <div class="stat-label">Increased lead generation</div>
-                <div class="stat-icon">
+              <!-- <div class="stat-card bottom-left"> -->
+                <!-- <div class="stat-value">+450%</div> -->
+                <!-- <div class="stat-label">Increased lead generation</div> -->
+                <!-- <div class="stat-icon">
                   <i class="bi bi-graph-up"></i>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -126,7 +126,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Accelerate Your Business Growth by Adopting Innovative a Digital Solutions</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -294,9 +294,9 @@
         <div class="row align-items-center about-showcase">
           <div class="col-lg-6 order-lg-2" data-aos="fade-left" data-aos-delay="300">
             <div class="about-image-grid">
-              <img src="assets/img/about/about-15.webp" class="img-grid-main" alt="Our company vision">
-              <img src="assets/img/about/about-17.webp" class="img-grid-secondary" alt="Our team">
-              <img src="assets/img/about/about-square-5.webp" class="img-grid-tertiary" alt="Our workspace">
+              <img src="assets/img/about/about-15.png" class="img-grid-main" alt="Our company vision">
+              <img src="assets/img/about/about-17.png" class="img-grid-secondary" alt="Our team">
+              <img src="assets/img/about/about-square-5.png" class="img-grid-tertiary" alt="Our workspace">
               <div class="experience-badge" data-aos="zoom-in" data-aos-delay="500">
                 <span class="years">21+</span>
                 <span class="text">Years of Excellence</span>
@@ -306,7 +306,7 @@
           <div class="col-lg-6 order-lg-1" data-aos="fade-right" data-aos-delay="200">
             <div class="about-content-box">
               <h3>Technical Proficiency</h3>
-              <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin gravida tortor in lectus pharetra, at iaculis orci scelerisque. Cras porta enim id neque interdum, at fermentum odio venenatis.</p>
+              <p class="mb-4">Instead of simply listing them, integrate skills and tools within a description of their application</p>
 
               <div class="progress-item">
                 <div class="d-flex justify-content-between">
@@ -353,7 +353,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Accelerate Your Business Growth by Adopting Innovative a Digital Solutions</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -545,7 +545,7 @@
             </div>
           </div>
           <div class="cta-image" data-aos="fade-left" data-aos-delay="300">
-            <img src="assets/img/illustration/illustration-13.webp" alt="CTA Illustration" class="img-fluid">
+            <img src="assets/img/illustration/illustration-13.png" alt="CTA Illustration" class="img-fluid">
           </div>
         </div>
       </div>
